[tool.poetry]
name = "vocoder-dictation"
packages = [
    { include = "vocoder" },
]
version = "0.1.0"
description = "Dictation for programmers"
license = "MIT"
authors = ["ricky <rickycontact9@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/ricky0123/vocoder"
documentation = "https://github.com/ricky0123/vocoder/blob/master/docs/user-guide.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
torch = "*"
sounddevice = "*"
webrtcvad = "*"
tqdm = "*"
lark-parser = "*"
loguru = "*"
transformers = "*"
aioconsole = "^0.5.0"
graphviz = "^0.20.1"

[tool.poetry.dev-dependencies]
pytest = "*"
ipython = "*"
black = "*"
isort = "*"
autoflake = "*"
pytest-asyncio = "*"
pytest-mock = "*"
pytest-timeout = "^2.1.0"
invoke = "^1.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
